Fixed insane high z-index for menu...

--- a/Resources/Public/css/application.css
+++ b/Resources/Public/css/application.css
@@ -154,6 +154,10 @@
 		font-family: CalligraffitiRegular, "Trebuchet MS","Helvetica Neue",Helvetica,Arial,sans-serif;
 	}
 	
+	.navbar-fixed-top, .navbar-fixed-bottom {
+		z-index: 11;
+	}
+	
 	.navbar-inner {
 		background-color:  #1b1b1b;
 		background-image: -moz-linear-gradient(top, #222222, #111111);
